Add --add-modules jdk.incubator.vector to the Surefire plugin